# dependency-extractor

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: cli.rs  mod.rs
src/extractor/: dependencies.rs  files.rs  mod.rs
src/extractor/dependencies/: mod.rs  output.rs  parse.rs
src/files/: mod.rs
tests/: cli.rs
tests/cases/module/expectations/: index.js.yaml
tests/cases/module/expectations/a/: print.js.yaml
tests/cases/module/expectations/b/: print-list.js.yaml
tests/cases/module/project/: index.js  package.json
tests/cases/module/project/a/: print.js
tests/cases/module/project/b/: print-list.js
