[package]
name = "dependency_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
globwalk = "0.8.1"
swc_ecma_parser = { version = "0.122.23", features = ["swc_ecma_visit"] }
swc_ecma_visit = "0.80.17"
